--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -3,8 +3,8 @@ name: Build and Test with Qt6 for VS2019
 on:
   push:
     branches: [ "main" ]
-
 env:
+  # 请根据你的项目实际情况修改解决方案文件名及路径
   SOLUTION_FILE_PATH: SimpleRustDesk.sln
   BUILD_CONFIGURATION: Release
 
@@ -16,16 +16,16 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # 检出仓库代码
+      # 检出当前仓库代码
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 安装 Qt6.8.2（这里使用 Chocolatey 安装，注意版本号和包名需与你需求一致）
-      - name: Install Qt6.8.2 via Chocolatey
+      # 尝试使用 Chocolatey 安装 Qt6 的预发布版
+      - name: Install Qt6 via Chocolatey
         run: |
-          choco install qt6 --version=6.8.2 -y
-          REM 如果安装后 Qt 的 bin 目录未自动加入 PATH，这里手动添加（请根据实际安装路径调整）
-          setx PATH "%PATH%;C:\Qt\6.8.2\msvc2019_64\bin"
+          choco install qt6 --pre -y
+          # 如果安装后 Qt 的 bin 目录未自动加入 PATH，这里手动添加（请根据实际情况调整路径）
+          setx PATH "$env:PATH;C:\Qt\6.8.2\msvc2019_64\bin"
 
       # 设置 MSBuild 环境（默认使用 VS2019 的 MSBuild 工具）
       - name: Setup MSBuild (VS2019)
@@ -35,6 +35,6 @@ jobs:
       - name: Check MSBuild Version
         run: msbuild -version
 
-      # 编译解决方案，使用多线程编译和指定编译配置
+      # 编译解决方案
       - name: Build Solution
-        run: msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} ${{ env.SOLUTION_FILE_PATH }}
+        run: msbuild /m /p:Configuration=$env:BUILD_CONFIGURATION $env:SOLUTION_FILE_PATH
