--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,12 +1,13 @@
-name: Build and Test with Qt6 for VS2019
+name: Build and Test with Qt6 for VS2022
 
 on:
   push:
     branches: [ "main" ]
 env:
-  # 请根据你的项目实际情况修改解决方案文件名及路径
   SOLUTION_FILE_PATH: SimpleRustDesk.sln
   BUILD_CONFIGURATION: Release
+  # 更新 QtMsBuild 变量为 VS2022 对应的路径（请根据实际路径调整）
+  QtMsBuild: "C:\Qt\6.8.2\msvc2022_64\QtMsBuild"
 
 permissions:
   contents: read
@@ -16,25 +17,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # 检出当前仓库代码
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 尝试使用 Chocolatey 安装 Qt6 的预发布版
       - name: Install Qt6 via Chocolatey
         run: |
           choco install qt6 --pre -y
-          # 如果安装后 Qt 的 bin 目录未自动加入 PATH，这里手动添加（请根据实际情况调整路径）
-          setx PATH "$env:PATH;C:\Qt\6.8.2\msvc2019_64\bin"
+          # 更新 PATH，确保指向 VS2022 对应的 Qt bin 目录
+          setx PATH "$env:PATH;C:\Qt\6.8.2\msvc2022_64\bin"
 
-      # 设置 MSBuild 环境（默认使用 VS2019 的 MSBuild 工具）
-      - name: Setup MSBuild (VS2019)
+      # 如果需要，也可以使用 microsoft/setup-msbuild Action，
+      # 目前它会自动选择最新安装的 VS 版本（包括 VS2022）
+      - name: Setup MSBuild (VS2022)
         uses: microsoft/setup-msbuild@v1.0.2
 
-      # 可选步骤：检查 MSBuild 版本，确认使用的是 VS2019 的 MSBuild
       - name: Check MSBuild Version
         run: msbuild -version
 
-      # 编译解决方案
       - name: Build Solution
-        run: msbuild /m /p:Configuration=$env:BUILD_CONFIGURATION $env:SOLUTION_FILE_PATH
+        run: msbuild /m /p:Configuration=$env:BUILD_CONFIGURATION /p:QtMsBuild=$env:QtMsBuild $env:SOLUTION_FILE_PATH
