--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -6,7 +6,7 @@ on:
 env:
   SOLUTION_FILE_PATH: SimpleRustDesk.sln
   BUILD_CONFIGURATION: Release
-  QtMsBuild: "${{ github.workspace }}\\QtMsBuild"
+  Qt_DIR: "C:\\Qt\\6.8.2\\msvc2022_64"  # 新增Qt目录变量
 
 permissions:
   contents: read
@@ -19,16 +19,23 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install Qt6 via Chocolatey
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install aqt
+        run: pip install aqtinstall
+
+      - name: Install Qt6
         run: |
-          choco install qt6 --pre -y
-          setx PATH "$env:PATH;C:\Qt\6.8.2\msvc2022_64\bin"
+          aqt install-qt windows desktop 6.8.2 win64_msvc2022_64 -m qtcore qtgui qtwidgets qtnetwork qtsvg
+          echo "Qt6_DIR=$env:Qt_DIR" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Setup MSBuild (VS2022)
         uses: microsoft/setup-msbuild@v1.0.2
 
-      - name: Check MSBuild Version
-        run: msbuild -version
-
       - name: Build Solution
-        run: msbuild /m /p:Configuration=$env:BUILD_CONFIGURATION /p:QtMsBuild=$env:QtMsBuild $env:SOLUTION_FILE_PATH
+        run: |
+          $env:Path = "C:\\Qt\\6.8.2\\msvc2022_64\\bin;$env:Path"
+          msbuild /m /p:Configuration=$env:BUILD_CONFIGURATION /p:QtVsTools=true /p:Qt_DIR="$env:Qt_DIR" $env:SOLUTION_FILE_PATH
