--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -33,6 +33,16 @@ jobs:
           aqt install-qt windows desktop 6.8.2 win64_msvc2022_64
           echo "Qt6_DIR=C:\\Qt\\6.8.2\\msvc2022_64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
+      - name: Install Qt Visual Studio Tools
+        run: |
+          # 1. 下载 Qt VS Tools 插件 (VSIX)
+          Invoke-WebRequest -Uri "https://download.qt.io/development_releases/vsaddin/qt-vsaddin-msvc2022.vsix" -OutFile "qt-vsaddin-msvc2022.vsix"
+          
+          # 2. 安装到 VS2022
+          Start-Process -FilePath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\VSIXInstaller.exe" `
+                        -ArgumentList "/quiet", "/shutdownall", "/install", "qt-vsaddin-msvc2022.vsix" `
+                       -Wait
+
       - name: Setup MSBuild (VS2022)
         uses: microsoft/setup-msbuild@v1.0.2
 
