--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -33,6 +33,9 @@ jobs:
           aqt install-qt windows desktop 6.8.2 win64_msvc2022_64
           echo "Qt6_DIR=C:\\Qt\\6.8.2\\msvc2022_64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
+      - name: Setup MSBuild (VS2022)
+        uses: microsoft/setup-msbuild@v1.0.2
+
       - name: Install Qt Visual Studio Tools
         run: |
           # 1. 下载 Qt VS Tools 插件 (VSIX)
@@ -44,10 +47,9 @@ jobs:
                        -Wait
 
       - name: Check QtMsBuild folder
-        run: dir $Env:LOCALAPPDATA\QtMsBuild
-
-      - name: Setup MSBuild (VS2022)
-        uses: microsoft/setup-msbuild@v1.0.2
+        run: |
+          dir $Env:LOCALAPPDATA
+          dir $Env:LOCALAPPDATA\QtMsBuild
 
       - name: Build Solution
         run: |
