--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -7,6 +7,7 @@ env:
   SOLUTION_FILE_PATH: SimpleRustDesk.sln
   BUILD_CONFIGURATION: Release
   Qt_DIR: "C:\\Qt\\6.8.2\\msvc2022_64"
+  QtMsBuild:
 
 permissions:
   contents: read
@@ -33,25 +34,25 @@ jobs:
           aqt install-qt windows desktop 6.8.2 win64_msvc2022_64
           echo "Qt6_DIR=C:\\Qt\\6.8.2\\msvc2022_64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
+
+      - name: Prepare QtMsBuild folder
+        run: |
+          # 先确保目标目录存在
+          New-Item -ItemType Directory -Path "$Env:LOCALAPPDATA\QtMsBuild" -Force | Out-Null
+          
+          # 拷贝仓库里的 QtMsBuild 脚本到本地用户目录
+          Copy-Item -Path "$Env:GITHUB_WORKSPACE\QtMsBuild\*" `
+                    -Destination "$Env:LOCALAPPDATA\QtMsBuild\" `
+                    -Recurse -Force
+          
+          # 设置环境变量 QtMsBuild，让后续 steps 的 MSBuild 都认识
+          echo "QtMsBuild=$Env:LOCALAPPDATA\QtMsBuild" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          
+          # 可选：看一下是否拷贝成功
+          dir $Env:LOCALAPPDATA\QtMsBuild
+
       - name: Setup MSBuild (VS2022)
         uses: microsoft/setup-msbuild@v1.0.2
-
-      - name: Install Qt Visual Studio Tools
-        run: |
-          Invoke-WebRequest -Uri "https://download.qt.io/development_releases/vsaddin/3.3.1/qt-vsaddin-msvc2022-x64-3.3.1.vsix" -OutFile "qt-vsaddin-msvc2022.vsix"
-          
-          Start-Process -FilePath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\VSIXInstaller.exe" `
-                        -ArgumentList "/quiet", "/shutdownall", "/install", "qt-vsaddin-msvc2022.vsix", "/logFile:vsaddin_install.log" `
-                        -Wait
-          
-          Write-Host "=== VSAddin install logs ==="
-          type vsaddin_install.log
-
-
-      - name: Check QtMsBuild folder
-        run: |
-          dir $Env:LOCALAPPDATA
-          dir $Env:LOCALAPPDATA\QtMsBuild
 
       - name: Build Solution
         run: |
