--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -50,10 +50,5 @@ jobs:
         uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Build Solution
-        run: |
-          msbuild SimpleRustDesk.sln ^
-            /m ^
-            /p:Configuration=Release ^
-            /p:Platform=x64 ^
-            /p:QtInstallation="Qt_6_8_2" ^
-            /p:QtInstallDir="C:\Qt\6.8.2\msvc2022_64"
+        run: msbuild SimpleRustDesk.sln /m /p:Configuration=Release /p:Platform=x64 /p:QtInstallation="Qt_6_8_2" /p:QtInstallDir="C:\Qt\6.8.2\msvc2022_64"
+
