--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Qt6
         run: |
           # 安装 Qt 6.8.2 + MSVC2022 64-bit 的核心包
-          aqt install-qt windows desktop 6.8.2 win64_msvc2022_64
+          aqt install-qt windows desktop 6.8.2 win64_msvc2022_64 -m all
           echo "Qt6_DIR=C:\\Qt\\6.8.2\\msvc2022_64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
 
@@ -44,7 +44,9 @@ jobs:
           
           # 设置环境变量 QtMsBuild，让后续 steps 的 MSBuild 都认识
           echo "QtMsBuild=$Env:LOCALAPPDATA\QtMsBuild" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          
+
+      - name: Check qmake
+        run: dir C:\Qt\6.8.2\msvc2022_64\bin
 
       - name: Setup MSBuild (VS2022)
         uses: microsoft/setup-msbuild@v1.0.2
