--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -27,10 +27,9 @@ jobs:
 
       - name: Install Qt6
         run: |
-          # 安装 Qt 6.8.2 + MSVC2022 64-bit 的核心包
-          aqt install-qt windows desktop 6.8.2 win64_msvc2022_64 -m all
+          # 指定输出目录为 C:\Qt，这样 Qt 会被安装到 C:\Qt\6.8.2\win64_msvc2022_64
+          aqt install-qt windows desktop 6.8.2 win64_msvc2022_64 -m all --outputdir "C:\Qt"
           echo "Qt6_DIR=C:\\Qt\\6.8.2\\win64_msvc2022_64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-
 
       - name: Prepare QtMsBuild folder
         run: |
@@ -46,11 +45,10 @@ jobs:
           echo "QtMsBuild=$Env:LOCALAPPDATA\QtMsBuild" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Check qmake
-        run: dir C:\Qt\6.8.2\
+        run: dir C:\Qt\6.8.2\win64_msvc2022_64\bin
 
       - name: Setup MSBuild (VS2022)
         uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Build Solution
         run: msbuild SimpleRustDesk.sln /m /p:Configuration=Release /p:Platform=x64 /p:QtInstallation="Qt_6_8_2" /p:QtInstallDir="C:\Qt\6.8.2\win64_msvc2022_64"
-
