--- a/DeskServer/DeskServer.vcxproj
+++ b/DeskServer/DeskServer.vcxproj
@@ -50,7 +50,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(QTDIR)\lib;..\Depend\ffmpeg\lib;..\Depend\protobuf\lib;..\Depend\RendezvousProto\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>RendezvousProto.lib;libprotobuf.lib;abseil_dll.lib;Qt6Network.lib;avcodec.lib;avformat.lib;avfilter.lib;swscale.lib;avutil.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>RendezvousProto.lib;libprotobuf.lib;abseil_dll.lib;Qt6Network.lib;avformat.lib;avcodec.lib;swscale.lib;avutil.lib;swresample.lib;avfilter.lib;avdevice.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="Configuration">
