--- a/.github/workflows/plantuml-render.yml
+++ b/.github/workflows/plantuml-render.yml
@@ -35,7 +35,8 @@ jobs:
 
       - name: Render UML diagrams to SVG
         run: |
-          java -Dfile.encoding=UTF-8 -jar plantuml.jar -tsvg -o diagrams/output diagrams/*.puml
+          cd diagrams
+          java -Dfile.encoding=UTF-8 -jar ../plantuml.jar -tsvg -o output *.puml
 
       - name: Verify output files exist
         run: |
