--- a/.github/workflows/plantuml-render.yml
+++ b/.github/workflows/plantuml-render.yml
@@ -48,6 +48,11 @@ jobs:
             ls -alh diagrams/output
           fi
 
+      - name: Print token length
+        run: echo "Token length: ${#PERSONAL_ACCESS_TOKEN}"
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
       - name: Commit rendered diagrams
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
