--- a/.github/workflows/plantuml-render.yml
+++ b/.github/workflows/plantuml-render.yml
@@ -49,7 +49,8 @@ jobs:
           fi
 
       - name: Print token length
-        run: echo "Token length: ${#PERSONAL_ACCESS_TOKEN}"
+        run: |
+          echo "Token length: ${#PERSONAL_ACCESS_TOKEN}"
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
