--- a/RelayServer/RelayServer.vcxproj
+++ b/RelayServer/RelayServer.vcxproj
@@ -79,8 +79,6 @@
     <ClCompile Include="LogWidget.cpp" />
     <ClCompile Include="RelayServer.cpp" />
     <ClCompile Include="main.cpp" />
-    <None Include="RelayServer.ico" />
-    <ResourceCompile Include="RelayServer.rc" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="LogWidget.h" />
@@ -90,6 +88,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="UdpHeartbeatServer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
