--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -3,6 +3,8 @@ name: Build
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: ["main"]
 env:
   SOLUTION_FILE_PATH: SimpleRustDesk.sln
 
