--- a/DeskServer/DeskServer.vcxproj
+++ b/DeskServer/DeskServer.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="PeerClient.cpp" />
     <ClCompile Include="RelayManager.cpp" />
     <ClCompile Include="RelayPeerClient.cpp" />
+    <ClCompile Include="RelaySocketWorker.cpp" />
     <ClCompile Include="RemoteInputSimulator.cpp" />
     <ClCompile Include="ScreenCaptureEncoder.cpp" />
     <QtRcc Include="DeskServer.qrc" />
@@ -99,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="RemoteInputSimulator.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="RelaySocketWorker.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
