--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -96,24 +96,25 @@ jobs:
         run: |
           Compress-Archive -Path packages\IDServer.zip,packages\RelayServer.zip,packages\DeskControler.zip,packages\DeskServer.zip -DestinationPath packages\FinalPackage.zip
 
-      # 创建 GitHub Release，并上传最终的打包文件
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # 以下步骤获取已存在的 Release 的 upload_url，并上传打包好的压缩包作为新资产
+      - name: Get existing Release upload URL
+        id: get_release
+        uses: actions/github-script@v6
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: 'Release ${{ github.ref_name }}'
-          draft: false
-          prerelease: false
-
+          script: |
+            const release = await github.rest.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: context.ref_name
+            });
+            return release.data.upload_url;
+      
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.result }}
           asset_path: packages\FinalPackage.zip
           asset_name: FinalPackage.zip
           asset_content_type: application/zip
